--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "axios": "^0.21.1",
     "bootcamp": "^1.1.7",
     "bootstrap": "^3.4.1",
-    "react": "^17.0.1",
+    "react": "^16.0.0",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.0.0",
+    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
